--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "view-dev-db": "psql -f ./view-dev-db.sql > dev-db.txt"
   },
   "repository": {
     "type": "git",
@@ -21,13 +22,16 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
+    "husky": "^7.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "pg-format": "^1.0.4",
-    "husky": "^7.0.0"
+    "supertest": "^6.2.4"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "pg": "^8.7.3"
   },
   "jest": {
